<?xml version="1.0"?>
<package format="2">
  <name>ros_2d_multi_robot_simulator</name>
  <version>1.0.0</version>
  <description>2d_multi_robot_simulator package made for the Robot Programming course</description>

  <maintainer email="ferraina.1857726@studenti.uniroma1.it">Sara Micol Ferraina</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
